--- a/de/LC_MESSAGES/gamestats.po
+++ b/de/LC_MESSAGES/gamestats.po
@@ -21,6 +21,9 @@ msgstr ""
 msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
 msgstr ""
 
+msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
+msgstr ""
+
 msgid "A {platforms} account is required to obtain {game} stats"
 msgstr ""
 
@@ -28,6 +31,12 @@ msgid "Available languages: [{languages}]"
 msgstr "Verfügbare Sprachen: [{languages}]"
 
 msgid "Check your DMs"
+msgstr ""
+
+msgid "Distance between {user1} and {user2}: {dist}ly"
+msgstr ""
+
+msgid "Distance to center"
 msgstr ""
 
 msgid "Files for {language_key} not found"
@@ -39,11 +48,17 @@ msgstr ""
 msgid "Languages reloaded"
 msgstr "Sprachen aktualisiert"
 
+msgid "Location"
+msgstr ""
+
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr "Suche {user} in {game} in {platform}..."
 
 msgid "Looking up {user} on {game}..."
 msgstr "Suche {user} in {game}..."
+
+msgid "No games currently being played."
+msgstr ""
 
 msgid "No response from user."
 msgstr "Keine Antwort vom Benutzer."
@@ -56,6 +71,9 @@ msgstr ""
 
 msgid "Please enter your {game} account name:"
 msgstr "Bitte gib deinen {game} Kontonamen ein:"
+
+msgid "Portal code"
+msgstr ""
 
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
@@ -95,13 +113,24 @@ msgstr ""
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr "Das ist keine zulässige Platform, möglich sind: {platforms}"
 
+msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
+msgstr ""
+
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr ""
 
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr ""
 
+msgid "Top {top_count} games currently being played in {guild_name}"
+msgstr ""
+
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
+msgstr ""
+
+msgid ""
+"What is the location of your NMS home base?\n"
+"To find its location, place a Signal Booster and note down the code it shows when you get close, in the format HUKYA:XXXX:XXXX:XXXX:XXXX"
 msgstr ""
 
 msgid "What platform do you play {game} on? [{platforms}]"
@@ -125,6 +154,9 @@ msgstr ""
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Du musst für {game} ein Konto hinzufügen, schreib {prefix}add {game_key}"
 
+msgid "{channel} in {guild} registered to receive live match updates."
+msgstr ""
+
 msgid "{game} Leaderboard for {guild}"
 msgstr ""
 
@@ -132,6 +164,12 @@ msgid "{game} account not found for {user}"
 msgstr "Kein {game} Konto gefunden für {user}"
 
 msgid "{game} account not found for {user} on {platform}"
+msgstr ""
+
+msgid "{game} live games for {guild}"
+msgstr ""
+
+msgid "{guild} unregistered from receiving live match updates."
 msgstr ""
 
 msgid "{language_key} removed from available languages, which are: [{languages}]"
@@ -142,4 +180,7 @@ msgstr "{language} zur Liste verfügbarer Sprachen hinzugefügt: [{languages}]"
 
 msgid "{language} not in list of available languages: {languages}"
 msgstr "{language} ist nicht in der Liste verfügbarer Sprachen: {languages}"
+
+msgid "{user}'s Home Base"
+msgstr ""
 
