--- a/rus/LC_MESSAGES/gamestats.po
+++ b/rus/LC_MESSAGES/gamestats.po
@@ -1,17 +1,17 @@
-# Russian translations for GameStats.
+# Russian (Russia) translations for GameStats.
 # Copyright (C) 2017 GameStats
 # This file is distributed under the same license as the GameStats project.
-# https://github.com/Avaren, 2017.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.2\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-08-14 01:00+0100\n"
-"PO-Revision-Date: 2017-12-16 00:57+0000\n"
+"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"PO-Revision-Date: 2017-12-16 01:18+0000\n"
 "Last-Translator: Avaren#9383\n"
-"Language: ru\n"
-"Language-Team: ru <LL@li.org>\n"
+"Language: ru_RU\n"
+"Language-Team: ru_RU <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -31,6 +31,12 @@ msgid "Available languages: [{languages}]"
 msgstr ""
 
 msgid "Check your DMs"
+msgstr ""
+
+msgid ""
+"Click the below icons to join/leave that group:\n"
+"\n"
+"{groups}"
 msgstr ""
 
 msgid "Distance between {user1} and {user2}: {dist}ly"
@@ -60,13 +66,16 @@ msgstr ""
 msgid "No games currently being played."
 msgstr ""
 
+msgid "No groups defined on {server}, use {command}"
+msgstr ""
+
 msgid "No response from user."
 msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr ""
 
-msgid "Please enter your account name for {game}:"
+msgid "No {game} stats found for {user} on {platform}"
 msgstr ""
 
 msgid "Please enter your {game} account name:"
