--- a/zh/LC_MESSAGES/gamestats.po
+++ b/zh/LC_MESSAGES/gamestats.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-08-14 01:00+0100\n"
+"POT-Creation-Date: 2017-12-16 01:07+0000\n"
 "PO-Revision-Date: 2017-08-12 12:56+0100\n"
 "Last-Translator: Viola#5458\n"
 "Language: zh\n"
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.5.1\n"
 
 msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
 msgstr ""
@@ -31,6 +31,12 @@ msgid "Available languages: [{languages}]"
 msgstr "可用的语言[{languages}]"
 
 msgid "Check your DMs"
+msgstr ""
+
+msgid ""
+"Click the below icons to join/leave that group:\n"
+"\n"
+"{groups}"
 msgstr ""
 
 msgid "Distance between {user1} and {user2}: {dist}ly"
@@ -60,13 +66,16 @@ msgstr "正在{game}寻找{user}..."
 msgid "No games currently being played."
 msgstr ""
 
+msgid "No groups defined on {server}, use {command}"
+msgstr ""
+
 msgid "No response from user."
 msgstr "此帐户没有回应"
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr ""
 
-msgid "Please enter your account name for {game}:"
+msgid "No {game} stats found for {user} on {platform}"
 msgstr ""
 
 msgid "Please enter your {game} account name:"
@@ -183,4 +192,7 @@ msgstr "{language}不是可用的语言: {languages}"
 
 msgid "{user}'s Home Base"
 msgstr ""
+
+#~ msgid "Please enter your account name for {game}:"
+#~ msgstr ""
 
